--- a/examples/simple-example/CMakeLists.txt
+++ b/examples/simple-example/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_example_executable(simple-example
-    simple-example.cpp
+    dialogue_editor.cpp
+    dialogue_editor.h
+    json.h
+    json.cpp
 )
